make a responsive footer section useing tailwind

--- a/index.html
+++ b/index.html
@@ -378,12 +378,12 @@
     </main>
     <footer>
       <section>
-        <div class="flex gap-16 w-full justify-center items-center mt-24 mb-40 px-24">
+        <div class="flex gap-16 w-full justify-center items-center mt-24 mb-40 px-24 md:flex-row flex-col-reverse">
           <!-- cart container -->
           <div>
             <!-- cart-01-->
             <div
-              class="flex gap-4 drop-shadow-md border border-solid rounded-xl m-5 p-5"
+              class="flex gap-4 drop-shadow-md border border-solid rounded-xl m-5 p-5 shadow-md	"
             >
               <div class="h-16 w-16 sm:text-center">
                 <img src="./icons/house.png" alt="" />
@@ -403,7 +403,7 @@
 
             <!-- cart-02-->
                   <div
-                  class="flex gap-4 drop-shadow-md border border-solid rounded-xl m-5 p-5"
+                  class="flex gap-4 drop-shadow-md border border-solid rounded-xl m-5 p-5 shadow-md	"
                 >
                   <div class="h-16 w-16 sm:text-center">
                     <img src="./icons/box.png" alt="" />
@@ -422,7 +422,7 @@
                 </div>
             <!-- cart-03-->
             <div
-            class="flex gap-4 drop-shadow-md border border-solid rounded-xl m-5 p-5"
+            class="flex gap-4 drop-shadow-md border border-solid rounded-xl m-5 p-5 shadow-md	"
           >
             <div class="h-16 w-16 sm:text-center">
               <img src="./icons/question.png" alt="" />
@@ -440,7 +440,7 @@
             </div>
           </div>
           </div>
-          <div class="w-[600px] ">
+          <div class="lg:w-[600px] ">
             <img src="images/shopping.png" alt="" />
           </div>
         </div>
